--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@types/jsoneditor": "^8.6.0",
     "@types/ramda": "^0.27.6",
     "@vuex-orm/core": "^0.36.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "handlebars": "^4.7.6",
+    "jsoneditor": "^9.0.1",
     "ramda": "^0.27.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.18.2",
-    "vue-property-decorator": "^8.5.0",
+    "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.3.4",
-    "vuetify": "^2.3.0",
-    "vuex": "^3.4.0"
+    "vuetify": "^2.3.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
-    "@types/webpack": "^4.41.17",
+    "@types/webpack": "^4.41.18",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -41,15 +43,15 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "sass": "^1.26.8",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
     "typescript": "~3.8.3",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.5.0",
     "vuex-class": "^0.3.2",
