--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@types/jsoneditor": "^8.6.0",
     "@types/ramda": "^0.27.6",
-    "@vuex-orm/core": "^0.36.3",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "handlebars": "^4.7.6",
@@ -55,7 +54,6 @@
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.5.0",
     "vuex-class": "^0.3.2",
-    "vuex-module-decorators": "^0.17.0",
-    "vuex-orm-decorators": "^1.1.9"
+    "vuex-module-decorators": "^0.17.0"
   }
 }
