--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
   },
   "dependencies": {
     "@types/jsoneditor": "^8.6.0",
-    "@types/ramda": "^0.27.6",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/ramda": "^0.27.10",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "handlebars": "^4.7.6",
-    "jsoneditor": "^9.0.1",
+    "jsoneditor": "^9.0.3",
+    "jwt-decode": "^2.2.0",
     "ramda": "^0.27.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-google-signin-button": "^1.0.4",
     "vue-i18n": "^8.18.2",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.3.4",
-    "vuetify": "^2.3.2",
+    "vuetify": "^2.3.4",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
-    "@types/webpack": "^4.41.18",
+    "@types/webpack": "^4.41.21",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -46,7 +49,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "sass": "^1.26.9",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
     "typescript": "~3.8.3",
     "vue-cli-plugin-i18n": "~1.0.1",
