--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
   "dependencies": {
     "@types/jsoneditor": "^8.6.0",
     "@types/jwt-decode": "^2.2.1",
-    "@types/ramda": "^0.27.10",
+    "@types/ramda": "^0.27.11",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "cypress": "^4.11.0",
     "handlebars": "^4.7.6",
     "jsoneditor": "^9.0.3",
     "jwt-decode": "^2.2.0",
     "ramda": "^0.27.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
+    "vue-class-component": "^7.2.4",
     "vue-google-signin-button": "^1.0.4",
     "vue-i18n": "^8.18.2",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.3.4",
-    "vuetify": "^2.3.4",
+    "vuetify": "^2.3.5",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
@@ -53,9 +54,9 @@
     "sass-loader": "^8.0.2",
     "typescript": "~3.8.3",
     "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-cli-plugin-vuetify": "^2.0.6",
+    "vue-cli-plugin-vuetify": "^2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.5.0",
+    "vuetify-loader": "^1.6.0",
     "vuex-class": "^0.3.2",
     "vuex-module-decorators": "^0.17.0"
   }
