--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "handlebars": "^4.7.6",
     "jsoneditor": "^9.0.3",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.27.0",
     "ramda": "^0.27.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
