--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
 VUE_APP_ENDPOINT=/api
+VUE_APP_GOOGLE_CLIENT_ID=433163468571-bqv3tk03pq1044qvir0qqkp3qunb3niu.apps.googleusercontent.com
