--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@types/jsoneditor": "^8.6.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/luxon": "^1.25.0",
     "@types/ramda": "^0.27.19",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "cypress": "^5.3.0",
     "jsoneditor": "^9.1.1",
     "jwt-decode": "^3.0.0",
-    "moment": "^2.29.0",
+    "luxon": "^1.25.0",
     "normalizr": "^3.6.0",
     "ramda": "^0.27.1",
     "register-service-worker": "^1.7.1",
